--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: postgres:13
     expose:
       - "5432"
+    ports:
+      - "5432:5432"
     volumes:
       - $HOME/postgresql/data:/var/lib/postgresql/data
     env_file:
@@ -13,6 +15,8 @@ services:
     image: redis:7.0-alpine
     expose:
       - "6379"
+    ports:
+      - "6379:6349"
   auth:
     build:
       context: .
@@ -23,6 +27,8 @@ services:
       - FLASK_APP=auth/app.py
     expose:
       - "8000"
+    ports:
+      - "8000:8000"
     depends_on:
       - postgres
       - redis
