--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,16 @@ cffi==1.15.1
 bcrypt==3.2.2
 alembic==1.8.1
 rauth==0.7.3
+opentelemetry-api==1.10.0
+opentelemetry-exporter-jaeger==1.10.0
+opentelemetry-exporter-jaeger-proto-grpc==1.10.0
+opentelemetry-exporter-jaeger-thrift==1.10.0
+opentelemetry-instrumentation==0.29b0
+opentelemetry-instrumentation-flask==0.29b1
+opentelemetry-instrumentation-wsgi==0.29b0
+opentelemetry-sdk==1.10.0
+opentelemetry-semantic-conventions==0.29b0
+opentelemetry-util-http==0.29b0
+Flask-Limiter==2.6.3
+
 
